--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,7 @@
 **/Libs/
 **/.settings/
 **/.classpath
-**.svn/
-**.class
-**.swp
-**/Libs/TempTestCase*
-**/Libs/TempTestSuite*
-**/bin/lib/TempTestCase*
+*.svn/
+*.class
+*.swp
 **/Reports/
