starting with api testing

--- a/Proyecto_Uno/.project
+++ b/Proyecto_Uno/.project
@@ -15,6 +15,18 @@
 		<nature>org.eclipse.jdt.groovy.core.groovyNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>kat-1831461143379103687.groovy</name>
+			<type>1</type>
+			<location>C:/Users/dev/AppData/Local/Temp/Katalon/Web Services/kat-1831461143379103687.groovy</location>
+		</link>
+		<link>
+			<name>kat-2859452511928152598.groovy</name>
+			<type>1</type>
+			<location>C:/Users/dev/AppData/Local/Temp/Katalon/Web Services/kat-2859452511928152598.groovy</location>
+		</link>
+	</linkedResources>
 	<filteredResources>
 		<filter>
 			<id>1675156921987</id>
