adding post test with params

--- a/Proyecto_Uno/.project
+++ b/Proyecto_Uno/.project
@@ -21,6 +21,11 @@
 			<type>1</type>
 			<location>C:/Users/dev/AppData/Local/Temp/Katalon/Web Services/kat-2051122960426284688.groovy</location>
 		</link>
+		<link>
+			<name>kat-3151337794386512510.groovy</name>
+			<type>1</type>
+			<location>C:/Users/dev/AppData/Local/Temp/Katalon/Web Services/kat-3151337794386512510.groovy</location>
+		</link>
 	</linkedResources>
 	<filteredResources>
 		<filter>
