adding put test

--- a/Proyecto_Uno/.project
+++ b/Proyecto_Uno/.project
@@ -26,6 +26,11 @@
 			<type>1</type>
 			<location>C:/Users/dev/AppData/Local/Temp/Katalon/Web Services/kat-3151337794386512510.groovy</location>
 		</link>
+		<link>
+			<name>kat-6089449560105674899.groovy</name>
+			<type>1</type>
+			<location>C:/Users/dev/AppData/Local/Temp/Katalon/Web Services/kat-6089449560105674899.groovy</location>
+		</link>
 	</linkedResources>
 	<filteredResources>
 		<filter>
