adding delete test

--- a/Proyecto_Uno/.project
+++ b/Proyecto_Uno/.project
@@ -17,6 +17,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>kat-1962064445339935126.groovy</name>
+			<type>1</type>
+			<location>C:/Users/dev/AppData/Local/Temp/Katalon/Web Services/kat-1962064445339935126.groovy</location>
+		</link>
+		<link>
 			<name>kat-2051122960426284688.groovy</name>
 			<type>1</type>
 			<location>C:/Users/dev/AppData/Local/Temp/Katalon/Web Services/kat-2051122960426284688.groovy</location>
